@@ -31,7 +31,6 @@ import stroom.util.concurrent.UncheckedInterruptedException;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -77,7 +76,7 @@ public class TableResultCreator implements ResultCreator {
             // What is the interaction between the paging and the maxResults? The assumption is that
             // maxResults defines the max number of records to come back and the paging can happen up to
             // that maxResults threshold
-            final TableSettings tableSettings = resultRequest.getMappings().get(0);
+            final TableSettings tableSettings = resultRequest.getMappings().getFirst();
             final List<Column> columns = WindowSupport.modifyColumns(tableSettings);
             resultBuilder.columns(columns);
 
